# Expresion_Evaluator_cpp23

./: .gitignore  CMakeLists.txt  README.md  variables.txt
lib/: ExpresionEvaluator.h  Parser.h  Validator.h  Variables.h
src/: main.cpp
test/: TestRunner.cpp
